# mianshi6

./: README.md
面试编程代码与说明/第一题/02_answer/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
面试编程代码与说明/第一题/02_answer/devel/lib/lidar_localization/: front_end_node
面试编程代码与说明/第一题/02_answer/devel/lib/pkgconfig/: lidar_localization.pc
面试编程代码与说明/第一题/02_answer/devel/share/lidar_localization/cmake/: lidar_localizationConfig.cmake
面试编程代码与说明/第一题/02_answer/devel/share/roseus/ros/lidar_localization/: manifest.l
面试编程代码与说明/第一题/02_answer/src/lidar_localization/config/front_end/: config.yaml
面试编程代码与说明/第一题/02_answer/src/lidar_localization/rviz/: front_end.rviz
面试编程代码与说明/第一题/02_answer/src/lidar_localization/slam_data/trajectory/: ground_truth.txt  laser_odom.txt
面试编程代码与说明/第一题/02_answer/src/lidar_localization/src/models/registration/: icp_svd_registration.cpp
面试编程代码与说明/第二题/: 程序运行说明
面试编程代码与说明/第二题/ch2/: CMakeLists.txt  useHello1.cpp
面试编程代码与说明/第二题/ch2/.kdev4/: ch2.kdev4
